tests/ui/unsorted-match-unstable.stderr
error: E::Bbb should sort before E::Ddd
  --> tests/ui/unsorted-match-unstable.rs:21:9
   |
21 |         E::Bbb(_, _) => {}
   |         ^^^^^^
